fixed text-field textarea placeholder overlap

--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -34,3 +34,10 @@ limitations under the License.
 .mdc-text-field {
   width: 100%;
 }
+
+// Textarea fullWidth placeholder overlap fixed
+.mdc-text-field__input {
+  .mdc-text-field--textarea:not(.mdc-text-field--focused):not(.mdc-text-field--no-label) &::placeholder {
+    opacity: 0;
+  }
+}
